adding an alternate parsed down tmux config for git bash

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,22 +2,22 @@
 
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+# set-option -g status-attr default
 
 # default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
+# set-window-option -g window-status-fg colour244 #base0
+# set-window-option -g window-status-bg default
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
+# set-window-option -g window-status-current-fg colour166 #orange
+# set-window-option -g window-status-current-bg default
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
+# set-option -g pane-border-fg colour235 #base02
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+# set-option -g message-bg colour235 #base02
+# set-option -g message-fg colour166 #orange
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
@@ -30,7 +30,7 @@ set -g status-interval 1
 set -g status-justify centre # center align window list
 set -g status-left-length 20
 set -g status-right-length 140
-set -g status-left '#[fg=green]#H #[fg=black]Ã¢â‚¬Â¢ #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
+set -g status-left '#[fg=green]#H #[fg=white]Ã¢â‚¬Â¢ #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
 set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=green]%Y-%m-%d'
 
 # C-b is not acceptable -- Vim uses it
@@ -51,16 +51,16 @@ set -g visual-activity on
 set-window-option -g mode-keys vi
 
 # mouse mode
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+# set -g mode-mouse on
+# set -g mouse-resize-pane on
+# set -g mouse-select-pane on
+# set -g mouse-select-window on
 
 # color
 set -g default-terminal "xterm-256color"
 
 # status bar
-set-option -g status-utf8 on
+# set-option -g status-utf8 on
 
 # -- Key Bindings --
 
@@ -71,8 +71,8 @@ bind-key C-Space last-window
 bind-key a send-prefix
 
 # Activity monitoring
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+# bind-key -t vi-copy 'v' begin-selection
+# bind-key -t vi-copy 'y' copy-selection
 
 # hjkl pane traversal
 bind h select-pane -L
@@ -86,13 +86,13 @@ bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # zoom this pane to full screen
-bind + \
-    new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \;\
-    swap-pane -s tmux-zoom.0 \;\
-    select-window -t tmux-zoom
+#bind + \
+#    new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \;\
+#    swap-pane -s tmux-zoom.0 \;\
+#    select-window -t tmux-zoom
 
 # restore this pane
-bind - \
-    last-window \;\
-    swap-pane -s tmux-zoom.0 \;\
-    kill-window -t tmux-zoom
+#bind - \
+#    last-window \;\
+#    swap-pane -s tmux-zoom.0 \;\
+#    kill-window -t tmux-zoom
